Reneamed references for License.openSourceC.FrameworkLibrary.html to License.openSourceC.StandardLibrary.html.

--- a/src/openSourceC.StandardLibrary.Core/openSourceC.StandardLibrary.Core.csproj
+++ b/src/openSourceC.StandardLibrary.Core/openSourceC.StandardLibrary.Core.csproj
@@ -19,7 +19,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="..\.resources\License.openSourceC.FrameworkLibrary.html" Link="Properties\License.openSourceC.FrameworkLibrary.html" />
+    <EmbeddedResource Include="..\.resources\License.openSourceC.StandardLibrary.html" Link="Properties\License.openSourceC.StandardLibrary.html" />
   </ItemGroup>
 
   <ItemGroup>
