--- a/src/openSourceC.StandardLibrary.Core/openSourceC.StandardLibrary.Core.csproj
+++ b/src/openSourceC.StandardLibrary.Core/openSourceC.StandardLibrary.Core.csproj
@@ -24,12 +24,13 @@
 
   <ItemGroup>
     <PackageReference Include="NLog" Version="4.5.11" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Core\SR.Designer.cs">
+    <Compile Update="SR.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>SR.resx</DependentUpon>
@@ -37,7 +38,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Core\SR.resx">
+    <EmbeddedResource Update="SR.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>SR.Designer.cs</LastGenOutput>
       <CustomToolNamespace>openSourceC.StandardLibrary</CustomToolNamespace>
