--- a/src/openSourceC.StandardLibrary.Data/openSourceC.StandardLibrary.Data.csproj
+++ b/src/openSourceC.StandardLibrary.Data/openSourceC.StandardLibrary.Data.csproj
@@ -7,15 +7,34 @@
     <Company>WGB Enterprises</Company>
     <Copyright>Copyright © 2018 WGB Enterprises</Copyright>
     <Authors>William Bosacker</Authors>
+    <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\netstandard2.0\openSourceC.StandardLibrary.Data.xml</DocumentationFile>
+    <DocumentationFile>openSourceC.StandardLibrary.Data.xml</DocumentationFile>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
+    <DocumentationFile>openSourceC.StandardLibrary.Data.xml</DocumentationFile>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <DocumentationFile>openSourceC.StandardLibrary.Data.xml</DocumentationFile>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>bin\Release\netstandard2.0\openSourceC.StandardLibrary.Data.xml</DocumentationFile>
+    <DocumentationFile>openSourceC.StandardLibrary.Data.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
+    <DocumentationFile>openSourceC.StandardLibrary.Data.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <DocumentationFile>openSourceC.StandardLibrary.Data.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
