Final update merge.  .NET Standard 2.1 and .NET Core 3.0 are now supported.

--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,4 @@ __pycache__/
 *.pyc
 
 /src/openSourceC.NetCoreLibrary.Windows/openSourceC.NetCoreLibrary.Windows.xml
+/src/openSourceC.StandardLibrary.Core/openSourceC.StandardLibrary.Core.xml
