Update .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,4 @@ __pycache__/
 
 /src/openSourceC.NetCoreLibrary.Windows/openSourceC.NetCoreLibrary.Windows.xml
 /src/openSourceC.StandardLibrary.Core/openSourceC.StandardLibrary.Core.xml
+/src/openSourceC.StandardLibrary.Data/openSourceC.StandardLibrary.Data.xml
