--- a/src/openSourceC.NetCoreLibrary.Data.SqlClient/openSourceC.NetCoreLibrary.Data.SqlClient.csproj
+++ b/src/openSourceC.NetCoreLibrary.Data.SqlClient/openSourceC.NetCoreLibrary.Data.SqlClient.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Configurations>Debug;Release</Configurations>
     <Platforms>AnyCPU;x86;x64</Platforms>
     <RootNamespace>openSourceC.NetCoreLibrary</RootNamespace>
