--- a/src/openSourceC.NetCoreLibrary.Legacy/openSourceC.NetCoreLibrary.Legacy.csproj
+++ b/src/openSourceC.NetCoreLibrary.Legacy/openSourceC.NetCoreLibrary.Legacy.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Configurations>Debug;Release</Configurations>
     <Platforms>AnyCPU;x86;x64</Platforms>
     <RootNamespace>openSourceC.NetCoreLibrary</RootNamespace>
@@ -9,7 +9,7 @@
     <Nullable>enable</Nullable>
     <NeutralLanguage>en-US</NeutralLanguage>
     <Company>WGB Enterprises</Company>
-    <Copyright>Copyright © 2020 WGB Enterprises</Copyright>
+    <Copyright>Copyright Â© 2020 WGB Enterprises</Copyright>
     <Authors>William Bosacker</Authors>
     <AssemblyOriginatorKeyFile>..\.resources\openSourceC.NetCoreLibrary.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
