--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -1,4 +1,9 @@
-﻿[*.{cs,vb}]
+﻿[*]
+end_of_line = crlf
 
+[*.{cs,vb}]
 # IDE0032: Use auto property
 dotnet_style_prefer_auto_properties = false:silent
+
+[*.xml]
+indent_style = space
