--- a/src/NuGet.config
+++ b/src/NuGet.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!-- This is the base configuration file that applies to all NuGet enabled projects -->
 <configuration>
 	<packageRestore>
 		<add key="enabled" value="True" />
@@ -12,4 +11,8 @@
 	<solution>
 		<add key="disableSourceControlIntegration" value="true" />
 	</solution>
+	<packageSources>
+		<clear />
+		<add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+	</packageSources>
 </configuration>
